# Spaceships

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/Spaceship/: bg.hpp  button.hpp  copyright_limitations.hpp  explosion.hpp  game.hpp  loader.hpp  main_menu.hpp  obstacle.hpp  star.hpp  xwing.hpp
src/: bg.cpp  button.cpp  explosion.cpp  game.cpp  loader.cpp  main.cpp  main_menu.cpp  obstacle.cpp  xwing.cpp
